Closed Bug 1426728 Opened 6 years ago Closed 6 years ago

Crash in AutoPointerEventTargetUpdater::AutoPointerEventTargetUpdater

Categories

(Core :: DOM: Events, defect, P2)

59 Branch
Unspecified
Windows 7
defect

Tracking

()

RESOLVED FIXED
mozilla59
Tracking Status
firefox-esr52 --- unaffected
firefox57 --- unaffected
firefox58 --- unaffected
firefox59 --- fixed

People

(Reporter: calixte, Assigned: stone)

References

(Blocks 1 open bug)

Details

(Keywords: crash, regression, Whiteboard: [clouseau])

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is
report bp-ffeadcc0-f062-4315-a692-d0ca80171221.
=============================================================

Top 10 frames of crashing thread:

0 xul.dll AutoPointerEventTargetUpdater::AutoPointerEventTargetUpdater layout/base/PresShell.cpp:572
1 xul.dll mozilla::PresShell::HandleEventWithTarget layout/base/PresShell.cpp:7585
2 xul.dll mozilla::PointerEventHandler::DispatchPointerFromMouseOrTouch dom/events/PointerEventHandler.cpp:584
3 xul.dll mozilla::PresShell::HandleEvent layout/base/PresShell.cpp:7366
4 xul.dll nsViewManager::DispatchEvent view/nsViewManager.cpp:812
5 xul.dll nsView::HandleEvent view/nsView.cpp:1140
6 xul.dll mozilla::widget::PuppetWidget::DispatchEvent widget/PuppetWidget.cpp:409
7 xul.dll mozilla::layers::APZCCallbackHelper::DispatchWidgetEvent gfx/layers/apz/util/APZCCallbackHelper.cpp:499
8 xul.dll mozilla::dom::TabChild::RecvRealTouchEvent dom/ipc/TabChild.cpp:1976
9 xul.dll mozilla::dom::PBrowserChild::OnMessageReceived ipc/ipdl/PBrowserChild.cpp:3804

=============================================================

There are 2 crashes in nightly 59 starting with buildid 20171220121833. In analyzing the backtrace, the regression may have been introduced by patch [1].

[1]
Forgot the changeset link:
[1] https://hg.mozilla.org/mozilla-central/rev/ce9b2476de5d
Flags: needinfo?(sshih)
Keywords: regression
Whiteboard: [clouseau]
Assignee: nobody → sshih
Flags: needinfo?(sshih)
Priority: -- → P2
Comment on attachment 8938699 [details] [diff] [review]
Don't cache the event target of pointer events when they are generated from touch

We cache the event target because we have to dispatch the mouse event to the same target as its corresponding pointer event. We don't need to do the same thing for touch events.
Attachment #8938699 - Flags: review?(bugs)
Comment on attachment 8938699 [details] [diff] [review]
Don't cache the event target of pointer events when they are generated from touch

I assume this gives the same behavior as what other browsers have with touch + pointer.

Good to get rid of that unused param of HandleEvent.
Attachment #8938699 - Flags: review?(bugs) → review+
Pushed by sshih@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/786c0c3f6975
Don't cache the event target of pointer events when they are generated from touch. r=smaug.
https://hg.mozilla.org/mozilla-central/rev/786c0c3f6975
Status: NEW → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: