Bug 1426728 - Don't cache the event target of pointer events when they are generated from touch. r=smaug.

The event targets of touch events are not necessarily to be the same as their corresponding pointer events. So we don't have to cache the event target of pointer events when they are generated from touch.

MozReview-Commit-ID: 9Gd6ion7NXf